force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Purchase Orders line items</relationshipLabel>
    <relationshipName>Purchase_Orders_line_items</relationshipName>
    <type>Lookup</type>
</CustomField>