force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/PO_line_item_code__c.field-meta.xml
<CustomField>
    <fullName>PO_line_item_code__c</fullName>
    <displayFormat>POLI-{000000}</displayFormat>
    <label>PO line item code</label>
    <type>AutoNumber</type>
</CustomField>