force-app/main/default/objects/Purchase_Order_Line_Item__c/fields/Total_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Cost__c</fullName>
    <formula>Quantity__c  *  Inventory_Item__r.Item_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>